<resources>
    <string name="app_name">Instagram_Page</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="posts">posts</string>
    <string name="_217">217</string>
    <string name="_6560">6560</string>
    <string name="_321">321</string>
    <string name="bio">Your name\nYour bio goes here..\nand here too</string>
    <string name="yoursite_com">Yoursite.com</string>
</resources>