<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:padding="10dp"
               android:text="@string/username"
               android:textSize="26sp"
               android:textStyle="bold"
               android:layout_marginStart="120dp"/>
           <ImageView
               android:layout_width="30dp"
               android:layout_height="30dp"
               android:src="@drawable/setting"
               android:layout_marginStart="60dp"
               android:layout_marginTop="10dp"/>

       </LinearLayout>
       <View android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@android:color/black"
           />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_margin="10dp"
           >
           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:cardCornerRadius="50dp"
               >

               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/profile_pic"
                   android:background="@color/black"/>
           </androidx.cardview.widget.CardView>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="25dp"
                       android:text="@string/_321"
                       android:textSize="20sp"
                       android:textStyle="bold" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="25dp"
                       android:text="@string/_6560"
                       android:textSize="20sp"
                       android:textStyle="bold" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="30dp"
                       android:text="@string/_217"
                       android:textSize="20sp"
                       android:textStyle="bold" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="25dp"
                       android:text="@string/posts"
                       android:textColor="@color/grey" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="25dp"
                       android:text="@string/followers"
                       android:textColor="@color/grey" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginStart="15dp"
                       android:text="@string/following"
                       android:textColor="@color/grey" />
               </LinearLayout>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">

                   <Button
                       android:layout_width="match_parent"
                       android:layout_height="40dp"
                       android:layout_marginStart="45dp"
                       android:backgroundTint="@color/grey"
                       android:text="@string/edit_profile"
                       android:textColor="@color/black"

                       />
               </LinearLayout>

           </LinearLayout>

       </LinearLayout>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="15dp"
           android:layout_marginTop="10dp"
           android:text="@string/bio"
           android:textSize="16sp"
           android:textStyle="bold" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="15dp"
           android:text="@string/yoursite_com"
           android:textColor="@color/blue" />

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@android:color/darker_gray" />

       <com.google.android.material.tabs.TabLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/apps1"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/lines"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/location"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/tags"/>
       </com.google.android.material.tabs.TabLayout>

       <GridLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:rowCount="2"
           android:columnCount="3"
           android:layout_margin="5dp">

           <ImageView
               android:layout_width="115dp"
               android:layout_height="115dp"
               android:src="@drawable/eagle_p1"
               android:layout_margin="2dp"
               />
           <ImageView
               android:layout_width="115dp"
               android:layout_height="115dp"
               android:src="@drawable/panther_p2"
               android:layout_margin="2dp"

               />
           <ImageView
               android:layout_width="115dp"
               android:layout_height="115dp"
               android:src="@drawable/bird_p3"
               android:layout_margin="2dp"

               />
           <ImageView
               android:layout_width="115dp"
               android:layout_height="115dp"
               android:src="@drawable/swan_p4"
               android:layout_margin="2dp"

               />
           <ImageView
               android:layout_width="115dp"
               android:layout_height="115dp"
               android:src="@drawable/panda_p5"
               android:layout_margin="2dp"

               />
           <ImageView
               android:layout_width="115dp"
               android:layout_height="115dp"
               android:src="@drawable/catto_p6"
               android:layout_margin="2dp"

               />

       </GridLayout>

       <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:background="@android:color/darker_gray"
           android:layout_marginTop="90dp"/>


       <com.google.android.material.tabs.TabLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           >
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/home_icon"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/search"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/camera"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/heart"/>
           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:icon="@drawable/profile"/>
       </com.google.android.material.tabs.TabLayout>

   </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>